--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Gonkngel 2014</p>
+		<p>&copy; Nglcode 2022</p>
 	</footer>
 </body>
 </html>
