--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2021
 	-->
 <head>
-	<title>Lots of trouble</title>
+	<title>Updating Title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Junk Filler Content -->
 		<p>
-			Just stuff for now
+			Just stuff for now, with stashin'
 		</p>
 	</main>
 	<footer class="container">
